# JaydenNdk

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/meitu/nativedoing/: MainActivity.kt
app/src/main/res/values/: strings.xml
audiovideo/: build.gradle
audiovideo/src/main/: AndroidManifest.xml
audiovideo/src/main/cpp/: CMakeLists.txt
audiovideo/src/main/cpp/gles/: GlesPlay.cpp  GlesPlay.h  PlayCallback.cpp  PlayCallback.h  video_play.cpp
audiovideo/src/main/cpp/opensl/: AudioEngine.h  OpenSLAudioPlay.cpp  OpenSLAudioPlay.h  audio_play.cpp
audiovideo/src/main/java/com/meitu/audiovideo/: MainActivity.java  Utils.java
audiovideo/src/main/java/com/meitu/audiovideo/audio/: AudioPlayerActivity.java  AudioRecorder.java  AudioTracker.java
audiovideo/src/main/java/com/meitu/audiovideo/video/: VideoPlayerActivity.java  YUVPlayer.java
audiovideo/src/main/res/layout/: activity_audio_player.xml  activity_main.xml  activity_video_player.xml
camera/: build.gradle
camera/src/main/: AndroidManifest.xml
camera/src/main/java/com/meitu/camera/: AutoFitSurfaceView.kt  Camera2Fragment.java  CameraApplication.java  CameraSizes.kt  Constant.java  MainActivity.java
camera/src/main/java/com/meitu/camera/view/: Camera2ShutterBtn.java  CameraOprCallback.java
camera/src/main/res/layout/: activity_main.xml  fragment_camera2.xml
camera/src/main/res/values/: attrs.xml
cmake1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello  main.cpp
gradle/wrapper/: gradle-wrapper.properties
hellolibs/: build.gradle
hellolibs/src/main/: AndroidManifest.xml
hellolibs/src/main/cpp/: CMakeLists.txt  hello-libs.cpp
hellolibs/src/main/cpp/include/: LearnPThread.h  LogUtil.h
hellolibs/src/main/cpp/source/: LearnPThread.cpp
hellolibs/src/main/java/com/meitu/hellolibs/: MainActivity.kt  NativeAndJava.java  NativeThread.java
hellolibs/src/main/res/layout/: activity_main.xml
hellolibs/src/main/res/values/: strings.xml
jnicallback/: build.gradle
jnicallback/src/androidTest/java/com/meitu/jnicallback/: ExampleInstrumentedTest.kt
jnicallback/src/main/: AndroidManifest.xml
jnicallback/src/main/cpp/: CMakeLists.txt  hello-jnicallback.c
jnicallback/src/main/java/com/meitu/jnicallback/: JniHandler.kt  JniHandler1.java  MainActivity.kt
jnicallback/src/main/res/layout/: activity_main.xml
jnicallback/src/test/java/com/meitu/jnicallback/: ExampleUnitTest.kt
learnffmpeg/: build.gradle
learnffmpeg/src/main/: AndroidManifest.xml
learnffmpeg/src/main/cpp/: CMakeLists.txt  learn-ffmpeg.cpp
learnffmpeg/src/main/cpp/include/player/: FFMediaPlayer.h
learnffmpeg/src/main/cpp/include/player/decoder/: AudioDecoder.h  Decoder.h  DecoderBase.h  VideoDecoder.h
learnffmpeg/src/main/cpp/include/player/render/audio/: AudioRender.h  AudioVisualRender.h  OpenSLRender.h
learnffmpeg/src/main/cpp/include/player/render/video/: NativeRender.h  OpenGLRender.h  VideoRender.h
learnffmpeg/src/main/cpp/include/util/: GLUtils.h  ImageDef.h  LogUtil.h
learnffmpeg/src/main/cpp/source/: FFMediaPlayer.cpp
learnffmpeg/src/main/cpp/source/player/decoder/: AudioDecoder.cpp  DecoderBase.cpp  VideoDecoder.cpp
learnffmpeg/src/main/cpp/source/render/: NativeRender.cpp
learnffmpeg/src/main/cpp/source/render/audio/: AudioVisualRender.cpp  OpenSLRender.cpp
learnffmpeg/src/main/cpp/source/render/video/: OpenGLRender.cpp
learnffmpeg/src/main/cpp/source/util/: GLUtils.cpp
learnffmpeg/src/main/java/com/meitu/learnffmpeg/: MainActivity.kt  NativeMediaPlayerActivity.java
learnffmpeg/src/main/java/com/meitu/learnffmpeg/media/: FFMediaPlayer.java  MySurfaceView.java
learnffmpeg/src/main/res/layout/: activity_main.xml  activity_media_player.xml
libstasticandshare/: CMakeLists.txt  build.gradle
libstasticandshare/gen-libs/: CMakeLists.txt  build.gradle
libstasticandshare/gen-libs/src/main/: AndroidManifest.xml
libstasticandshare/gen-libs/src/main/cpp/jayden/: CMakeLists.txt  jayden.cpp
libstasticandshare/gen-libs/src/main/cpp/yangyang/: CMakeLists.txt  yangyang.cpp  yangyang.h
libstasticandshare/src/main/: AndroidManifest.xml
libstasticandshare/src/main/cpp/: CMakeLists.txt  native.cpp
libstasticandshare/src/main/cpp/third/include/: jayden.h
libstasticandshare/src/main/java/com/meitu/libstasticandshare/: MainActivity.kt
libstasticandshare/src/main/res/values/: strings.xml
nativeactivity/: build.gradle
nativeactivity/src/main/: AndroidManifest.xml
nativeactivity/src/main/cpp/: CMakeLists.txt  main.cpp
nativeactivity/src/main/res/values/: strings.xml
opengl/: build.gradle
opengl/src/main/: AndroidManifest.xml
opengl/src/main/cpp/: CMakeLists.txt  JniImpl.cpp
opengl/src/main/cpp/render/: MyGLRenderContext.cpp  MyGLRenderContext.h
opengl/src/main/cpp/sample/: GLSampleBase.h  TriangleSample.cpp  TriangleSample.h
opengl/src/main/cpp/util/: ImageDef.h  JaydenSyncLock.h  LogUtil.h
opengl/src/main/java/com/meitu/opengl/: MainActivity.java  MyGLRender.java  MyGLSurfaceView.java
opengl/src/main/java/com/meitu/opengl/jni/: MyNativeRender.java
